# zephyr

samples/net/cloud/drogue_iot_mqtt/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/net/cloud/drogue_iot_mqtt/src/: ca_certificate.h  dhcp.c  main.c  protocol.c  protocol.h
